ci: add GitHub Actions for Cloudflare Workers (OpenNext) and define dev/prod Wrangler environments\n\n- Add [env.dev] and [env.prod] to wrangler.toml (separate Workers)\n- Deploy on push to develop/main using OpenNext deploy (--env)\n- PR previews via wrangler versions upload in dev env\n- Uses CLOUDFLARE_API_TOKEN and CLOUDFLARE_ACCOUNT_ID secrets

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -11,9 +11,13 @@ compatibility_flags = ["nodejs_compat"]
 directory = ".open-next/assets"
 binding = "ASSETS"
 
-# Environment configuration for staging (optional)
-# Uncomment and configure if you need a staging environment
-# [env.staging]
-# name = "lumiloops-oficial-staging"
-# compatibility_date = "2025-03-25"
-# compatibility_flags = ["nodejs_compat"]
+# Environments
+# Dev environment (separate Worker for previews/QA)
+[env.dev]
+name = "lumiloops-oficial-dev"
+vars = { ENV = "development" }
+
+# Prod environment (stable)
+[env.prod]
+name = "lumiloops-oficial"
+vars = { ENV = "production" }
